# gplug

./: CMakeLists.txt  README-en.md  README.md
docs/: plugin.ppt
docs/2.开发流程/: README.md
docs/markdown/: ConfigFile.md  Interface.md
docs/markdown/1.DevelopmentProcess/: README.md
docs/markdown/pic/: plugin.ppt
doxygen/: CMakeLists.txt  Doxyfile  MainPage.md
example/: CMakeLists.txt  README.md
example/example01/: CMakeLists.txt  Makefile
example/example01/CatPlugin/: CMakeLists.txt
example/example01/CatPlugin/src/: Cat.cpp  Makefile
example/example01/DogPlugin/: CMakeLists.txt  Makefile
example/example01/DogPlugin/src/: Dog.h  Makefile
example/example01/Plug/: CMakeLists.txt  Makefile  main.cpp
example/example01/Plug/gplugin/: gplugin.xml
example/example02/: CMakeLists.txt
example/example02/CatPlugin/: CMakeLists.txt  Cat.c  Makefile
example/example02/CatPlugin/src/: Cat.h  CatPlugin.c
example/example02/DogPlugin/: CMakeLists.txt  Dog.h  Makefile
example/example02/DogPlugin/src/: Dog.c  DogPlugin.c
example/example02/Plug/: CMakeLists.txt  main.cpp
example/example02/Plug/gplugin/: gplugin.xml  gplugin_win.xml
example/example02/interface/: GetTypeInterface.h  GetWeightInterface.h
include/: CMakeLists.txt  Debug.h  gplug.h  gplugMgr.h  gplugin.h
include/interface/: GetWeightInterface.h
src/: CMakeLists.txt  Makefile  SysWrapper.h  dirent.h  gplug.cpp  gplugMgr.cpp
src/vs2008/: gplug.sln  gplug.vcproj
test/: CMakeLists.txt  Makefile  main.cpp
test/CatPlugin/src/: Makefile
test/DogPlugin/src/: Dog.cpp  DogPlugin.cpp  Makefile  Rules.make
test/Plug/: Makefile  main.cpp
test/gplugin/: gplugin.xml
test/test01/: CMakeLists.txt
test/test01/PlugMgr/: CMakeLists.txt  main.cpp
test/test01/PlugMgr/gplugin/: gplugin.xml
test/test02/: CMakeLists.txt
test/test02/CatPlugin/: CMakeLists.txt  Cat.cpp  Cat.h  CatPlugin.cpp
test/test02/DogPlugin/: CMakeLists.txt
test/test02/PlugMgr/: CMakeLists.txt  main.cpp
test/test02/PlugMgr/gplugin/: gplugin.xml
test/test02/interface/: GetTypeInterface.h
